--- a/firmware/releases.yaml
+++ b/firmware/releases.yaml
@@ -26,7 +26,7 @@ Targets:
   SimpleKriaKv260Example:
     ImageDir: targets/SimpleKriaKv260Example/images
     Extensions:
-      - tar.gz
+      - petalinux.tar.gz
       - bit
 
 Releases:
