Adding XVC to target

--- a/firmware/targets/SimpleKriaKv260Example/Makefile
+++ b/firmware/targets/SimpleKriaKv260Example/Makefile
@@ -1,6 +1,9 @@
 # Define target output
 target: bit
 
+# Using XVC Debug bridge
+export USE_XVC_DEBUG = 1
+
 # Define target part
 export PRJ_PART = xck26-sfvc784-2lv-c
 
