--- a/.github/workflows/release_ci.yml
+++ b/.github/workflows/release_ci.yml
@@ -20,7 +20,24 @@ jobs:
 
 # ----------------------------------------------------------------------------
 
+  test_and_document:
+    name: Test And Generate Documentation
+    runs-on: ubuntu-24.04
+    steps:
+
+      # This step checks out a copy of your repository.
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
+
+# ----------------------------------------------------------------------------
+
   gen_release:
+    needs: [test_and_document]
     uses: slaclab/ruckus/.github/workflows/gen_release.yml@main
     with:
       version: '1.0.0'
@@ -30,6 +47,7 @@ jobs:
 # ----------------------------------------------------------------------------
 
   conda_build_proj:
+    needs: [test_and_document]
     uses: slaclab/ruckus/.github/workflows/conda_build_proj.yml@main
     with:
       version: '1.0.0'
